View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026469 | Open CASCADE | OCCT:Foundation Classes | public | 2015-07-22 13:45 | 2015-10-23 20:50 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026469: Methods Seek(), ChangeSeek() are missing in class NCollection_IndexedDataMap | ||||
Description | The class NCollection_DataMap does contain the methods Seek(), ChangeSeek(), but the class NCollection_IndexedDataMap does not. | ||||
Steps To Reproduce | It is not necessary to have a test script. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26469 has been created by pkv. SHA-1: 1c29294ea00e112217a600adde3f9d208f245530 No new revisions were added by this update. |
|
Branch CR26469 has been updated by pkv. SHA-1: 89733b61e4de4eb835d9e734a4860d7b8e08b947 Detailed log of new commits: Author: pkv Date: Wed Jul 22 14:11:36 2015 +0300 0026469: Methods Seek(), ChangeSeek() are missing in class NCollection_IndexedDataMap I. New features: 1.1. class NCollection_IndexedDataMap - method: const TheItemType* Seek(const TheKeyType& theKey1) const has been added. The method Seek returns pointer to Item by Key. Returns NULL if Key was not found. - method: TheItemType* ChangeSeek (const TheKeyType& theKey1) has been added. The method ChangeSeek returns modifiable pointer to Item by Key. Returns NULL if Key was not found. II. Changes: No changes. III. Modified entities: packages: NCollection |
|
Please review the branch CR26469 |
|
No remarks, please test |
|
Branch CR26469 has been updated forcibly by apv. SHA-1: 5ea22102c5638a891305643eaf4d3eaf4fe18b1e |
|
Branch CR26469 has been rebased on the current master |
|
Dear BugMaster, Branch CR26469 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 5ea22102c5638a891305643eaf4d3eaf4fe18b1e Number of compiler warnings: occt component: Linux: 15 (15 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 99735113 / 99901711 [-0.17%] Total CPU difference: 17414.94999999946 / 17410.37999999943 [+0.03%] Testing on Windows: Total MEMORY difference: 57629452 / 58590978 [-1.64%] Total CPU difference: 16079.709474398962 / 16889.807067299294 [-4.80%] |
|
Branch CR26469 has been deleted by inv. SHA-1: 5ea22102c5638a891305643eaf4d3eaf4fe18b1e |
occt: master 031d5ab7 2015-07-22 11:11:36
Committer: bugmaster Details Diff |
0026469: Methods Seek(), ChangeSeek() are missing in class NCollection_IndexedDataMap I. New features: 1.1. class NCollection_IndexedDataMap - method: const TheItemType* Seek(const TheKeyType& theKey1) const has been added. The method Seek returns pointer to Item by Key. Returns NULL if Key was not found. - method: TheItemType* ChangeSeek (const TheKeyType& theKey1) has been added. The method ChangeSeek returns modifiable pointer to Item by Key. Returns NULL if Key was not found. II. Changes: No changes. III. Modified entities: packages: NCollection |
Affected Issues 0026469 |
|
mod - src/NCollection/NCollection_IndexedDataMap.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-22 13:45 |
|
New Issue | |
2015-07-22 13:45 |
|
Assigned To | => abv |
2015-07-22 14:00 | git | Note Added: 0043288 | |
2015-07-22 14:11 | git | Note Added: 0043289 | |
2015-07-22 14:12 |
|
Assigned To | abv => pkv |
2015-07-22 14:12 |
|
Status | new => assigned |
2015-07-22 14:12 |
|
Status | assigned => resolved |
2015-07-22 14:13 |
|
Note Added: 0043290 | |
2015-07-22 14:14 |
|
Assigned To | pkv => abv |
2015-07-22 17:05 |
|
Note Added: 0043318 | |
2015-07-22 17:05 |
|
Assigned To | abv => bugmaster |
2015-07-22 17:05 |
|
Status | resolved => reviewed |
2015-07-24 15:38 | git | Note Added: 0043416 | |
2015-07-24 15:38 |
|
Note Added: 0043417 | |
2015-07-24 15:38 |
|
Assigned To | bugmaster => apv |
2015-07-27 13:00 |
|
Test case number | => Not needed |
2015-07-27 14:00 |
|
Note Added: 0043555 | |
2015-07-27 14:00 |
|
Assigned To | apv => bugmaster |
2015-07-27 14:00 |
|
Status | reviewed => tested |
2015-07-31 12:31 | bugmaster | Changeset attached | => occt master 031d5ab7 |
2015-07-31 12:31 | bugmaster | Status | tested => verified |
2015-07-31 12:31 | bugmaster | Resolution | open => fixed |
2015-08-14 10:53 | git | Note Added: 0044156 | |
2015-08-26 10:59 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-23 20:50 |
|
Fixed in Version | => 6.9.1 |